fix scrollbar

--- a/a2_trip_info/DetailedSearch.css
+++ b/a2_trip_info/DetailedSearch.css
@@ -112,7 +112,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 .single-item {
